--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "@emotion/eslint-plugin": "^11.7.0",
     "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@react-three/fiber": "^8.0.27",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,7 +25,9 @@
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "three": "^0.142.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -49,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.141.0"
   }
 }
