--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@emotion/eslint-plugin": "^11.7.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@react-spring/three": "^9.4.5",
+    "@react-three/drei": "^9.14.3",
     "@react-three/fiber": "^8.0.27",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -17,10 +19,12 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/parser": "^5.30.3",
+    "@use-gesture/react": "^10.2.16",
     "customize-cra": "^1.0.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
+    "leva": "^0.9.28",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
@@ -29,7 +33,8 @@
     "react-scripts": "5.0.1",
     "three": "^0.142.0",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
